# kasparro-ai-agentic-content-generation-system-karthik-ponna

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: product_data.json
docs/: projectdocumentation.md
expected_output/: comparison_page.json  faq.json  product_page.json
output/: comparison_page.json  faq.json  product_page.json
src/: __init__.py  config.py  exceptions.py  main.py  models.py  workflow.py
src/agents/: comparison_generator.py  content_logic.py  faq_generator.py  parser_agent.py  product_generator.py  questions_generator.py
src/prompts/: comparison_generator.yaml  content_logic.yaml  faq_generator.yaml  product_generator.yaml  question_generator.yaml
src/utils/: llm_factory.py  prompt_loader.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_exceptions.py  test_models.py  test_parser_agent.py  test_prompt_loader.py
