[project]
name = "kasparro-ai-agentic-content-generation-system-karthik-ponna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.1.2",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
